--- a/frontend/src/styles/TravelComponent.css
+++ b/frontend/src/styles/TravelComponent.css
@@ -1,4 +1,5 @@
 .travel-card {
+    display: flex;
     border: 1px solid #ccc;
     padding: 20px;
     margin: 20px;
@@ -6,8 +7,15 @@
     background-color: #f9f9f9;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     min-width: 300px; /* Set a max width for each card */
-    text-align: center; /* Center the text */
+    text-align: left; /* Center the text */
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    max-height: 300px;
+    gap: 1em;
+  }
+
+  .travel-card .img img{
+    max-height: 250px;
+    border-radius: 0.25em;
   }
   
   .travel-card:hover {
