--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -86,3 +86,16 @@ ul li {
 .link:hover {
     color: var(--clr-light);
 }
+
+h1{
+    margin-top: 2rem;
+}
+
+p{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    max-width: 50vw;
+    padding: 1em;
+    font-size: var(--size-lg);
+}
+
+
