--- a/frontend/src/styles/TravelComponent.css
+++ b/frontend/src/styles/TravelComponent.css
@@ -1,49 +1,137 @@
 .travel-card {
     display: flex;
-    border: 1px solid #ccc;
+    flex-direction: row;
+    align-items: stretch;
+    border: 2px solid #ccc;
     padding: 20px;
     margin: 20px;
     border-radius: 10px;
-    background-color: #f9f9f9;
+    background-color: var(--clr-slate800);
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     min-width: 300px; /* Set a max width for each card */
     text-align: left; /* Center the text */
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     max-height: 300px;
+    min-width: 70vw;
     gap: 1em;
+  }
+
+  .wrapper{
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .price-button{
+    display: flex;
+  }
+
+  .price-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    align-self: flex-end;
+  }
+
+  #btn-res{
+    position: relative;
+    display: inline-block;
+    font-weight: 600;
+    text-decoration: none;
+    letter-spacing: -0.05em;
+    background-color: var(--clr-slate800);
+    color: var(--clr-rose600);
+    padding: 0.5em 1em;
+    border: 1px solid var(--clr-rose600);
+    border-radius: 0.5em;
+    transition: 0.3s;
+    z-index: 1;
+  }
+
+  #btn-res:hover{
+    background-color: var(--clr-rose600);
+    color: var(--clr-light);
+  }
+
+  .fas{
+    color: black;
+  }
+
+  .stars-container {
+    display: inline-flex; /* This will keep stars in line */
+    align-items: center; /* Align the stars vertically */
+    gap:0.2rem;
+  }
+  
+  .star {
+    width: 25px; /* Adjust the size as needed */
+    height: 25px;
+  }
+
+  .wrapper3{
+    font-style: italic;
+    display: flex;
+    align-items: baseline;
+    justify-self: end;
+    gap: 1em;
+  }
+
+  .wrapper3 p{
+    font-size: var(--size-sm);
+  }
+
+  .hotel {
+    width: 25px; /* Adjust the size as needed */
+    height: 25px;
+    color: var(--clr-light)
+  }
+
+  #price{
+    align-self: flex-end;
+    font-size: var(--size-2xl);
+    flex-grow: 1;
+  }
+
+  #cena{
+    color: var(--clr-rose600);
+  }
+
+  .price-value{
+    font-style: italic;
+    font-weight: 400;
   }
 
   .travel-card .img img{
     max-height: 250px;
     border-radius: 0.25em;
+    border: 2px solid var(--clr-light);
   }
   
   .travel-card:hover {
-    transform: translateY(-5px); /* Slight lift effect on hover */
-    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    border-color: var(--clr-indigo600);
+    transition: ease 0.3s;
   }
   
   .travel-card h3 {
-    color: #333;
-    font-size: 1.5rem;
-    margin-bottom: 15px;
+    color: var(--clr-rose600);
+    font-size: var(--size-3xl);
   }
   
   .travel-card p {
-    color: #666;
-    line-height: 1.6;
-    margin-bottom: 10px;
+    color: var(--clr-light);
+    padding: 0.6em 0;
   }
   
   .travel-card p:last-child {
-    color: #444;
     font-weight: bold;
-    margin-top: 15px;
   }
   
   .travel-list {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-around; /* Distribute space around cards */
+    justify-content: center;
+    align-items: center; /* Distribute space around cards */
     padding: 20px;
   }
