--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -5,7 +5,7 @@
     --clr-slate400: #94a3b8;
     --clr-slate600: #475569;
     --clr-slate800: #1e293b;
-    --clr-rose600: #f43f5e;
+    --clr-rose600: rgb(244, 63, 94);
     --clr-indigo600: #4f46e5;
 
     /* rose rgb(225,29,72) */
