--- a/frontend/src/styles/CreateTravelOption.css
+++ b/frontend/src/styles/CreateTravelOption.css
@@ -1,12 +1,17 @@
 #main{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    gap: 1em;
     border: 2px solid var(--clr-indigo600);
     border-radius: 2em;
     padding: 1em 5em;
     background-color: rgba(255, 255, 255, 0);
     box-shadow: 0px 0px 10px 1px rgb(53, 44, 215),
         0px 0px 100px rgba(53, 44, 215);
+}
+
+#describe{
+    flex-shrink: 0;
 }
 
 #main h2{
@@ -75,7 +80,7 @@ input[type="date"]{
     gap: 1em;
     font-family: monospace;
     align-items: flex-end;
-    justify-content: center;
+    justify-content:center;
 }
 
 .gpt__prompt{
@@ -119,6 +124,27 @@ input[type="date"]{
         #fd004c
     );
     animation: spin 3s infinite linear;
+}
+
+.gpt__response{
+    display: flex;
+    padding: 1em;
+}
+
+.response {
+    text-align: left;
+    padding: 1em;
+    font-size: var(--size-lg);
+    width: 100%;
+    height: 20%;
+    min-width: 0;
+    background-color: var(--clr-slate800);
+    border-radius: 1em;
+}
+
+.loading-circle{
+    justify-self: center;
+    align-self: center;
 }
 
 @keyframes spin{
