--- a/frontend/src/styles/CreateTravelOption.css
+++ b/frontend/src/styles/CreateTravelOption.css
@@ -12,6 +12,16 @@
 
 #describe{
     flex-shrink: 0;
+    flex-direction: column;
+}
+
+.describe-callendar {
+    display: flex;
+    flex-direction: column;
+}
+
+#save {
+    max-width: 100px;
 }
 
 #main h2{
@@ -56,6 +66,10 @@
 .callendar-date{
     display: flex;
     gap: 1em;
+}
+
+form .btn{
+    margin-top: 1.5em;
 }
 
 input[type="date"]{
